# weovim

./: Cargo.toml  build.rs
shaders/: quad.vert
src/: color.rs  cursor.rs  editor.rs  grid.rs  main.rs  neovim.rs  text.rs  ui.rs
src/grid/: lines.rs  rendered.rs
src/neovim/: api.rs  events.rs  msg.rs  rpc.rs
src/nvim/: mod.rs
src/nvim/events/: grid.rs  mod.rs  parse.rs
src/ui/: gpu.rs  graphics.rs  rect.rs  renderers.rs  text.rs  window.rs
src/ui/graphics/: color.rs  font.rs  gpu.rs  quad.rs  transform.rs
src/ui/graphics/shader/: quad.frag  quad.vert
