[package]
name = "weovim"
version = "0.1.0"
authors = ["Luis Holanda <luiscmholanda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = "0.1.20"
fnv = "1.0.7"
winit = "0.22.2"
wgpu = "0.6.0"
wgpu_glyph = "0.10.0"
glyph_brush = "0.7.0"
shaderc = "0.6.2"
env_logger = "0.7.1"
log = "0.4.11"
font-kit = "0.10.0"
rmp = "0.8.9"
bumpalo = { version = "3.4.0", features = ["collections", "boxed"] }
bitflags = { version = "1.2.1", default-features = false }
cache-padded = "1.1.1"

[dependencies.tokio]
version = "0.2.22"
features = ["rt-threaded", "io-driver", "io-util", "process", "sync", "blocking", "macros"]
